Delet logo image

--- a/css/basic.css
+++ b/css/basic.css
@@ -26,9 +26,13 @@ body,html{
     position: relative; 
 }
 
-.header .logo img{
+.header .logo{
     width: 100px;
     height: 100px;
+}
+
+.header .logo img{
+    width: 100%;
     margin-left: 100px; 
     box-sizing: border-box;
     /* background-color: #a00; */
