--- a/css/basic.css
+++ b/css/basic.css
@@ -15,40 +15,54 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 body,html{
     width: 100%;
     min-width: 1200px;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.wrap{
+    width: 100%;
+    height: 100%;
+    /* CSS Smooth Scroll */
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
 }
 
 .header{
     display: flex;
-    align-items: center;
     width: 100%;
     min-width: 1200px;
-    background-color:#7fffd4;
-    position: relative; 
+    height: 50px;
+    background-color:rgba(78, 78, 78, 0.9);
+    position: fixed; 
 }
 
 .header .logo{
-    width: 100px;
-    height: 100px;
-    padding: 10px;
+    width: 15%;
+    height: 50px;
 }
-
+/*
 .header .logo img{
     width: 100%;
     margin-left: 100px; 
     box-sizing: border-box;
-    /* background-color: #a00; */
+    // background-color: #a00; 
     vertical-align: middle;
 }
-
+*/
 .header .header-nav{
-    margin: auto;
+    width: 70%;
+    display: flex;
+    justify-content: center;
 }
 
 .header .header-nav a{
     position: relative;
+    height: 50px;
+    line-height: 50px;
     display: inline-block;
     text-decoration: none;
-    color:#191970;
+    color:rgba(255, 160, 122);
     font-size: 24px;
     padding: 0px 15px;
     font-family: 'Noto Sans TC', sans-serif;
@@ -63,7 +77,7 @@ body,html{
     left: 50%;
     right: 50%;
     height: 0;
-    bottom: -10%;
+    bottom: 10%;
     transition: .3s;
 }
 
@@ -72,50 +86,54 @@ body,html{
     right: 0;
 }
 
-
 .header .header-nav a:hover{
     color: #6e6eeb;
-    transform: translateY(-10px);
+    transform: translateY(-5px);
 }
 
 .header .header-search{
-    display: flex;
-    margin-right: 50px;
+    display: flex;  
+    align-self: center;
+    width: 15%;
+    height: 2rem;
     /* background-color: #aa0;  */
 }
 
 .header-search input,.header-search button{
     border: none;
+    font-size: .9rem;
     background-color:rgba(255, 255, 255, 0.548);
-    padding: 5px 10px; 
+    padding: 0 8px ;
 }
 
 .header-search input,.header-search button:focus{
-    outline: none;
+    outline: none;   
 }
 
 .header-search input{
-    font-size: 16px;
+    width: 80%;
     font-family: 'Noto Sans TC', sans-serif;
-    border-radius: 200px 0px 0px 200px;
+    border-radius: 100px 0px 0px 100px;
 }
 
 .header-search button{
-    border-radius: 0px 200px 200px 0px;
+    width: 15%;
+    border-radius: 0px 100px 100px 0px;
 }
 
 .banner{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
     width: 100%;
-    height: 600px;
+    height: 100vh;
     min-width: 1200px;
     /* max-width: 100%; */
     overflow: hidden;
     background: 
-        linear-gradient(115deg,#f0f8ff 30%,transparent 70%) center center
+        linear-gradient(125deg,#ffffff 25%,transparent 80%) left center
         ,
-        url("https://picsum.photos/1980/1080?random=2") right center
+        url("https://images.pexels.com/photos/317356/pexels-photo-317356.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=1080&w=1980") right center
         ;
     background-size: cover;
 }
@@ -149,18 +167,26 @@ body,html{
     width: 100%;
     min-width: 1200px;
     max-width: 100%; 
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    margin: 150px 0;
+    
+    /*Scroll Snap*/
+    scroll-snap-align: center;
+    scrollbar-base-color: #a00;
+    scroll-snap-stop: always;
 }
 
 .container h2{
-    font-size: 36px;
+    font-size: 2rem;
     font-family: 'Noto Sans TC', sans-serif;
+    display: flex;
+    justify-content: center;
     text-align: center;
-    margin: 20px auto 40px;
+    margin: 100px auto 0;
     color: #66cdaa;
     position: relative;
+    
 }
 
 .container h2::before{
@@ -187,18 +213,14 @@ body,html{
     background-color: #66cdaa;
 }
 
-.talent-skills > p:first-of-type{
-    width: 75%;
-    display: flex;
-    margin: auto;
-    text-align: center;
-    color: #696969;
-    padding: 10px 5px 20px;
+.talent-skills{
+    background: url("https://images.pexels.com/photos/876467/pexels-photo-876467.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=1080&w=1980");
+    background-size: cover;
 }
 
 .talent-item-wrap{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
     width: 75%;
     margin: auto;
     padding-top: 80px;
@@ -206,21 +228,21 @@ body,html{
 
 .talent-items{
     width: 30%;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 1);
     text-align: center;
-    border: solid 10px #66cdaa;
+    border: solid 10px #E4C1AE;
     border-radius: 15px;
 }
 
 .talent-items .talent-icon{
     width: 150px;
     height: 150px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255,1);
     margin: -80px auto 0px;
     border-radius: 50%;
     line-height: 150px;
     font-size: 80px;
-    color: #66cdaa;
+    color: #E4C1AE;
     position: relative;
 }
 
@@ -229,7 +251,7 @@ body,html{
     position: absolute;
     width: 100%;
     height: 100%;
-    border: solid 10px #66cdaa;
+    border: solid 10px #E4C1AE;
     left: -10px;
     top: -10px;
     border-radius: 50%;
@@ -254,28 +276,29 @@ body,html{
 .talent-items h3{
     font-size: 36px;
     font-weight: 300;
-    color: #66cdaa;
+    color: #E4C1AE;
     margin-bottom: .4em;
     font-family: 'Noto Sans TC', sans-serif;
 }
 
 .talent-items p{
     font-size: 16px;
-    color: #696969;
+    color: #363636;
     line-height: 1.6;
     padding: 2em;
     font-family: 'Noto Sans TC', sans-serif;
 }
 
 .recent-activity{
-    background-color: #dcdcdc;
-    padding: 50px 0px;
+    background:url("https://images.pexels.com/photos/743986/pexels-photo-743986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=1080&w=1980");
+    background-size: contain;
 }
 
 .activity-wrap{
+    width: 80%;
+    height: 50%;
     display: flex;
     margin: auto;
-    width: 75%;
 }
 
 .activity-items{
@@ -283,24 +306,25 @@ body,html{
     justify-content: center;
     margin: 0 30px;
     width: 50%;
+    height: 100%;
     border: #66cdaa 5px solid;
     background-color: #66cdaa;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 .activity-items .pic{
-    width: 50%;
+    width: 60%;
 }
 
 .activity-items .pic img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 .activity-items .txt{
-    width: 50%;
+    width: 40%;
     padding: 10px;
     text-align: left;
     box-sizing: border-box;
@@ -346,6 +370,11 @@ body,html{
     color: #66cdaa;
 }
 
+.elite-lecturer{
+    background: url("https://images.pexels.com/photos/3350123/pexels-photo-3350123.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=1080&w=1980");
+    background-size: cover;
+}
+
 .lecturer-wrap{
     width: 75%;
     display: flex;
@@ -362,12 +391,16 @@ body,html{
 
 .lecturer-item .pic{
     margin: 15px 0px;
-    width: auto;
+    width: 300px;
+    height: 300px;
     max-width: 500px;
 }
 
 .lecturer-item .pic img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
     border-radius: 50%; 
 }
 
@@ -377,23 +410,64 @@ body,html{
 
 .lecturer-item .txt h3{
     font-size: 36px;
-    color: #66cdaa;
+    color: #3f3cfd;
     padding-bottom: .5em;
 }
 
 .lecturer-item .txt p{
     width: 75%;
     margin: auto;
-    color: #696969;
+    color: #ffffff;
 }
 
-.footer{
+.member{
+    background: url("https://images.pexels.com/photos/1103970/pexels-photo-1103970.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+    background-size: cover;
+    display: flex;
+    align-self: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.login{
+    width: 50%;
+    height: 75%;
+    display: flex;
+    margin: auto;
+    align-items: center;
+    background-color:rgba(255, 255, 255, .85);
+    border-radius: 1rem;
+}
+
+.login .login-form{
     display: flex;
     width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 0 2rem;
 }
 
-.footer .footer-copyright{
+.login .login-form label{
+    font-size: 24px;
+}
+
+.login .login-form input[type=text],input[type=password]{
     width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-size: 1rem;
+}
+
+.member .footer-copyright{
+    display: flex;
+    justify-content: center;
+    align-self: flex-end;
+    width: 100%;
+
     background-color: #222;
     text-align: center;
     font-size: 18px;
